--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node app.js",
     "test": "jest",
     "format:ci": "prettier . --check",
     "format": "prettier . --write",
@@ -17,18 +18,40 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.24.6",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
+    "jest": "^25.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "axios": "^1.7.2"
-  }
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "glob": "^10.4.1",
+    "inflight": "^1.0.6",
+    "rimraf": "^5.0.7"
+  },
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
 }
