--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
