--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "jest",
     "format:ci": "prettier . --check",
@@ -17,6 +16,7 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.24.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
