--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.24.6",
+    "@babel/node": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
@@ -33,6 +34,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2"
   }
