--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
