--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js",
-    "test": "jest",
+    "start": "babel-node src/main.js",
+    "test": "jest --verbose --setupFiles dotenv/config",
     "format:ci": "prettier . --check",
     "format": "prettier . --write",
     "lint:ci": "eslint .",
