--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "module": "module",
   "scripts": {
     "start": "babel-node src/main.js",
     "test": "jest --verbose --setupFiles dotenv/config",
@@ -30,6 +30,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
