--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -4,19 +4,20 @@
 name: Full tests
 
 on:
+  push:
+    branches: ['master']
+  pull_request:
+    branches: ['master']
   workflow_dispatch:
-  release:
-    types: ['prereleased']
-#   schedule:
-#     - cron: "*/5 * * * *"
+
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    #     strategy:
-    #       matrix:
-    #         node-version: [18.x]
+        strategy:
+          matrix:
+            node-version: [20.x]
 
     steps:
       - uses: actions/checkout@v3
