--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -30,22 +30,22 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test:coverage
+        run: npm run test
         continue-on-error: true
 
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: report
-          if-no-files-found: error
-          path: ./jest-html-report
+      # - name: Upload report
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: report
+      #     if-no-files-found: error
+      #     path: ./jest-html-report
 
-      - name: Upload coverage
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          if-no-files-found: error
-          path: ./coverage
+      # - name: Upload coverage
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: coverage
+      #     if-no-files-found: error
+      #     path: ./coverage
 #     - name: Deploy
 #       uses: JamesIves/github-pages-deploy-action@v4
 #       with:
