--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -33,12 +33,12 @@ jobs:
         run: npm run test
         continue-on-error: true
 
-      # - name: Upload report
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: report
-      #     if-no-files-found: error
-      #     path: ./jest-html-report
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: report
+          if-no-files-found: error
+          path: ./jest-html-report
 
       # - name: Upload coverage
       #   uses: actions/upload-artifact@v3
