--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           name: report
           if-no-files-found: error
-          path: ./jest-html-report
+          path: ./reports/
 
       # - name: Upload coverage
       #   uses: actions/upload-artifact@v3
