--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -40,28 +40,17 @@ jobs:
           if-no-files-found: error
           path: ./reports/
 
-      # - name: Upload coverage
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: coverage
-      #     if-no-files-found: error
-      #     path: ./coverage
-#     - name: Deploy
-#       uses: JamesIves/github-pages-deploy-action@v4
-#       with:
-#         folder: jest-html-report
-#         clean: true
-#         token: ${{ secrets.TOKEN }}
+    - name: send telegram message on push
+      uses: appleboy/telegram-action@master
+      with:
+        to: -1002197542084
+        # to: ${{ secrets.TELEGRAM_TO }}
+        token: "7232559745:AAEMbqz3zdQzcaaPcwIxmMDqvCugtA7MRNo"
+        # token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: |
+          ${{ github.actor }} created commit messege Yubelik:
+          Commit message: ${{ github.event.commits[0].message }}
 
-#     - name: send telegram message on push
-#       uses: appleboy/telegram-action@master
-#       with:
-#         to: ${{ secrets.TELEGRAM_TO }}
-#         token: ${{ secrets.TELEGRAM_TOKEN }}
-#         message: |
-#           ${{ github.actor }} created commit:
-#           Commit message: ${{ github.event.commits[0].message }}
+          Repository: ${{ github.repository }}
 
-#           Repository: ${{ github.repository }}
-
-#           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+          See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
