--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -38,14 +38,12 @@ jobs:
         with:
           name: report
           if-no-files-found: error
-          path: ./reports/
+          path: ./reports
 
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
-          # to: -1002197542084
           to: ${{ secrets.TELEGRAM_TO }}
-          # token: '7232559745:AAEMbqz3zdQzcaaPcwIxmMDqvCugtA7MRNo'
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             ${{ github.actor }} created commit messege Yubelik:
@@ -54,3 +52,7 @@ jobs:
             Repository: ${{ github.repository }}
 
             See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: './reports'
