--- a/.github/workflows/full-test.js.yml
+++ b/.github/workflows/full-test.js.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           name: report
           if-no-files-found: error
-          path: ./reports
+          path: ./reports/html-report
 
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
@@ -65,7 +65,7 @@ jobs:
       - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
-        path: './reports/html-report/'
+        path: './reports/html-report'
 
     - name: Deploy to GitHub Pages
       id: deployment
