--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.24.6",
+    "@faker-js/faker": "^8.4.1",
+    "@playwright/test": "^1.45.1",
+    "@types/node": "^20.14.10",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
