--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/node": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@faker-js/faker": "^8.4.1",
+    "@playwright/test": "^1.45.1",
+    "@types/node": "^20.14.10",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
