modified:   package.json 	new file:   playwright-report/index.html 	new file:   test-results/.last-run.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "module",
   "scripts": {
     "start": "babel-node src/main.js",
-    "test": "jest --verbose --setupFiles dotenv/config",
+    "test": "jest",
     "format:ci": "prettier . --check",
     "format": "prettier . --write",
     "lint:ci": "eslint .",
