new file:   framework/config/configCrystalPuzzels.js 	new file:   framework/services/AuthServiceCrystalPuzzels.js 	modified:   package-lock.json 	modified:   package.json 	new file:   tests/api.test.crystalPuzzles.js 	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "module": "module",
+  "type": "module",
   "scripts": {
     "start": "babel-node src/main.js",
     "test": "jest",
@@ -20,7 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@babel/node": "^7.24.6",
-    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-env": "^7.24.8",
     "@faker-js/faker": "^8.4.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
