--- a/package.json
+++ b/package.json
@@ -1,37 +1,48 @@
 {
-  "name": "qajs-2024-03",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "module": "module",
-  "scripts": {
-    "start": "babel-node src/main.js",
-    "test": "jest --setupFiles dotenv/config",
-    "format:ci": "prettier . --check",
-    "format": "prettier . --write",
-    "lint:ci": "eslint .",
-    "lint": "eslint . --fix",
-    "codestyle:ci": "run-p lint:ci format:ci",
-    "codestyle": "run-s lint format"
-  },
-  "author": "Damir Rysaev <freepad@ya.ru>",
-  "keywords": [],
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.7.0",
-    "jest-html-reporters": "^3.1.7",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "supertest": "^7.0.0",
-    "ts-node": "^10.9.2"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5"
-  }
+    "name": "qajs-2024-03",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "module": "module",
+    "scripts": {
+        "start": "babel-node src/main.js",
+        "test": "jest --setupFiles dotenv/config",
+        "format:ci": "prettier . --check",
+        "format": "prettier . --write",
+        "lint:ci": "eslint .",
+        "lint": "eslint . --fix",
+        "codestyle:ci": "run-p lint:ci format:ci",
+        "codestyle": "run-s lint format",
+        "codeceptjs": "codeceptjs run --steps",
+        "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
+        "codeceptjs:ui": "codecept-ui --app",
+        "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+        "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+    },
+    "author": "Damir Rysaev <freepad@ya.ru>",
+    "keywords": [],
+    "license": "ISC",
+    "devDependencies": {
+        "@codeceptjs/configure": "^1.0.1",
+        "@codeceptjs/examples": "^1.2.4",
+        "@codeceptjs/ui": "^0.7.7",
+        "codeceptjs": "^3.5.11",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-promise": "^6.1.1",
+        "jest": "^29.7.0",
+        "jest-html-reporters": "^3.1.7",
+        "npm-run-all": "^4.1.5",
+        "playwright": "^1.45.3",
+        "prettier": "^3.2.5",
+        "supertest": "^7.0.0",
+        "ts-node": "^10.9.2"
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5"
+    }
 }
