--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "module",
   "scripts": {
     "start": "babel-node src/main.js",
-    "test": "jest --setupFiles dotenv/config",
+    "test_back": "jest --setupFiles dotenv/config",
+    "test": "jest",
     "format:ci": "prettier . --check",
     "format": "prettier . --write",
     "lint:ci": "eslint .",
@@ -18,6 +19,10 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-flow": "^7.24.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -32,6 +37,7 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "core-js": "^3.38.0",
     "dotenv": "^16.4.5"
   }
 }
