new file:   BDD/loginCP_test.js 	new file:   "BDD/output/\320\230\320\267\320\274\320\265\320\275\320\265\320\275\320\270\320\265_\320\260\320\262\320\260\321\202\320\260\321\200\320\272\320\270.failed.png" 	modified:   "BDD/output/\320\243\320\262\320\265\320\264\320\276\320\274\320\273\320\265\320\275\320\270\321\217.failed.png" 	new file:   codecept.back.conf.js 	modified:   codecept.conf.js 	modified:   package-lock.json 	modified:   package.json 	new file:   steps_file.js 	deleted:    tests-examples/demo-todo-app.spec.js 	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "module": "module",
     "scripts": {
         "start": "babel-node src/main.js",
-        "test": "jest --setupFiles dotenv/config",
+        "test_back": "jest --setupFiles dotenv/config",
+        "test": "jest",
         "format:ci": "prettier . --check",
         "format": "prettier . --write",
         "lint:ci": "eslint .",
@@ -27,7 +28,7 @@
         "@codeceptjs/configure": "^1.0.1",
         "@codeceptjs/examples": "^1.2.4",
         "@codeceptjs/ui": "^0.7.7",
-        "codeceptjs": "^3.5.11",
+        "codeceptjs": "^3.6.5",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-config-standard": "^17.1.0",
